--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@
 /data/*_postgres.zip
 /data/postgres/
 /data/postgres_test/
-/dist/iotemplateapp.exe
+/dist/iogames.exe
 /dist/linux/
 /dist/macos/
 /dist/windows/
@@ -24,7 +24,7 @@
 Pipfile.lock
 __pycache__
 coverage.lcov
-iotemplateapp.egg-info/
+iogames.egg-info/
 logging_*.log
 resources/Gammadyne/timer.txt
 run_*.log
