--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,18 +26,18 @@ keywords = [
 maintainers = [
     { name = "Team IO-Aero", email = "info@io-aero.ch" },
 ]
-name = "iotemplateapp"
+name = "iogames"
 readme = "README.md"
 requires-python = ">=3.10"
 version = "1.4.4"
 
 [project.urls]
-"Bug Tracker" = "https://github.com/io-aero/io-template-app/issues"
-Documentation = "https://io-aero.github.io/io-template-app/"
-Homepage = "https://github.com/io-aero/io-template-app"
-"Release History" = "https://io-aero.github.io/io-template-app/release_history/"
-"Release Notes" = "https://io-aero.github.io/io-template-app/release_notes/"
-Source = "https://github.com/io-aero/io-template-app/tree/main/iotemplateapp"
+"Bug Tracker" = "https://github.com/io-aero/io-games/issues"
+Documentation = "https://io-aero.github.io/io-games/"
+Homepage = "https://github.com/io-aero/io-games"
+"Release History" = "https://io-aero.github.io/io-games/release_history/"
+"Release Notes" = "https://io-aero.github.io/io-games/release_notes/"
+Source = "https://github.com/io-aero/io-games/tree/main/iogames"
 
 [tool.bandit]
 skips = [
@@ -68,7 +68,7 @@ markers = [
     "issue",
 ]
 norecursedirs = "./tests/helpers"
-pythonpath = "./iotemplateapp/"
+pythonpath = "./iogames/"
 testpaths = "./tests/"
 
 [tool.ruff]
@@ -80,7 +80,7 @@ exclude = [
     ".pytest_cache",
     ".vscode",
     "build",
-    "iotemplateapp.egg-info",
+    "iogames.egg-info",
     "temp",
 ]
 line-length = 100
