--- a/.github/workflows/standard.yml
+++ b/.github/workflows/standard.yml
@@ -54,6 +54,7 @@ jobs:
           sudo apt-get update && sudo apt-get install -y dos2unix
           chmod +x scripts/run_prep_*.sh
           dos2unix scripts/run_prep_*.sh
+          ./scripts/run_prep_bash_scripts.sh
 
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v5
